# sri-lang

./: Cargo.toml  grammar.pest
src/: ast.rs  hello_world.dari  lib.rs  main.rs  node.rs  operators.rs  parser.rs
src/ast/: node.rs  operators.rs
src/compiler/: interpreter.rs
